--- a/src/Integration/packages.config
+++ b/src/Integration/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.20.301151232" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net452" />
+  <package id="SonarLint" version="1.7.0" targetFramework="net452" developmentDependency="true" />
 </packages>
