--- a/src/TestInfrastructure/packages.config
+++ b/src/TestInfrastructure/packages.config
@@ -9,4 +9,5 @@
   <package id="NuGet.Versioning" version="3.3.0" targetFramework="net452" />
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="SonarLint" version="1.7.0" targetFramework="net452" developmentDependency="true" />
 </packages>
