Extract the transferable state into a separate cls
The visual state needs to be transferrable between TE navigations
since the view and vm are disposed each time.
I've also simplified the tests, the API and removed the bound-projects (plural)
concept and replaced it with a single HasBoundProject property which will work
with WPF as long as the state API will be used to set/clear the bound project.

--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Binding\ProjectRuleSetWriterTests.cs" />
     <Compile Include="ActiveSolutionTrackerTests.cs" />
     <Compile Include="Service\VersionHelperTests.cs" />
+    <Compile Include="State\TransferableVisualStateTests.cs" />
     <Compile Include="TeamExplorer\ConnectSectionControllerTests.cs" />
     <Compile Include="TeamExplorer\ConnectSectionTests.cs" />
     <Compile Include="TeamExplorer\ConnectSectionViewModelTests.cs" />
