Minor refactoring and added unit test for colliding version checking

--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -46,7 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\CommandIds.cs" />
-    <Compile Include="Commands\SonarAnalyzerCollisionManager.cs" />
+    <Compile Include="SonarAnalyzerCollisionManager.cs" />
     <Compile Include="Commands\VsCommandBase.cs" />
     <Compile Include="Commands\ManageConnectionsCommand.cs" />
     <Compile Include="Commands\PackageCommandManager.cs" />
