--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -21,7 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>Integration.Debug.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>
+    </CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,7 +31,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>Integration.Release.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>
+    </CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.IdentityModel.Clients.ActiveDirectory, Version=2.20.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -120,7 +122,6 @@
     <Compile Include="Binding\NuGetHelper.cs" />
     <Compile Include="Binding\ProjectRuleSetWriter.cs" />
     <Compile Include="Binding\SolutionRuleSetWriter.cs" />
-    <Compile Include="Connection\ConnectedProjectsEventArgs.cs" />
     <Compile Include="Connection\ConnectionWorkflow.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="HostedCommandControllerBase.cs" />
@@ -130,6 +131,8 @@
     <Compile Include="IActiveSolutionTracker.cs" />
     <Compile Include="IServiceProviderExtensions.cs" />
     <Compile Include="IIntegrationSettings.cs" />
+    <Compile Include="Persistence\ISolutionBinding.cs" />
+    <Compile Include="Progress\IProgressStepRunnerWrapper.cs" />
     <Compile Include="Service\DataModel\ServerPlugin.cs" />
     <Compile Include="Service\RoslynExporter\AdditionalFile.cs" />
     <Compile Include="Service\RoslynExporter\Configuration.cs" />
@@ -137,7 +140,10 @@
     <Compile Include="Service\RoslynExporter\NuGetPackageInfo.cs" />
     <Compile Include="Service\RoslynExporter\RoslynExportProfile.cs" />
     <Compile Include="Service\VersionHelper.cs" />
+    <Compile Include="State\IStateManager.cs" />
+    <Compile Include="State\StateManager.cs" />
     <Compile Include="State\TransferableVisualState.cs" />
+    <Compile Include="IHost.cs" />
     <Compile Include="TeamExplorer\ITeamExplorerController.cs" />
     <Compile Include="TeamExplorer\ResourceHelper.cs" />
     <Compile Include="TeamExplorer\SonarQubeNavigationItem.cs" />
@@ -184,7 +190,7 @@
       <DependentUpon>ConnectionInfoDialogView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ActiveSolutionTracker.cs" />
-    <Compile Include="TeamExplorer\ConnectSectionController.cs" />
+    <Compile Include="VsSessionHost.cs" />
     <Compile Include="TeamExplorer\IConnectSection.cs" />
     <Compile Include="TelemetryLoggerAccessor.cs" />
     <Compile Include="WPF\ContextualCommandsCollection.cs" />
@@ -203,7 +209,7 @@
     <Compile Include="WPF\RelayCommand`1.cs" />
     <Compile Include="WPF\RelayCommandBase.cs" />
     <Compile Include="WPF\ViewModelBase.cs" />
-    <Compile Include="TeamExplorer\ConnectSection.cs" />
+    <Compile Include="TeamExplorer\SectionController.cs" />
     <Compile Include="InternalsVisibleTo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\AssemblyInfo.Shared.cs" />
@@ -259,8 +265,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Integration.Debug.ruleset" />
-    <None Include="Integration.Release.ruleset" />
+    <None Include="Integration.ruleset" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
